add websocket on server add send geometry function ovre websocket

--- a/forma-extension/www/index.html
+++ b/forma-extension/www/index.html
@@ -11,5 +11,7 @@
     </style>
     <script type="module" src="./forma.js"></script>
 </head>
-<body></body>
+<body>
+    <button id="geometry-btn">Send geometry</button>
+</body>
 </html>
